fix: remove extra gap in side menu items. (#3553)

--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -166,7 +166,6 @@ h6 {
 .menu__list {
   display: flex;
   flex-direction: column;
-  gap: 16px;
 }
 
 .menu__link:hover {
